--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.4.1",
+    "axios": "^0.19.0",
+    "downshift": "^3.2.14",
+    "moment": "^2.24.0",
+    "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "axios": "^0.19.0",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "mdbreact": "^4.19.2",
-    "prop-types": "^15.7.2",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "1.1.4",
-    "unsplash-js": "^5.0.0"
+    "react-md": "^1.12.3",
+    "react-moment": "^0.9.2",
+    "react-redux": "^7.0.2",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-toastify": "^5.3.2",
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +28,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
