--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crae-example",
+  "name": "weather-app-server",
   "version": "1.0.0",
   "description": "Create-react-app with Express",
   "main": "index.js",
@@ -8,12 +8,11 @@
     "start": "node index.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "author": "Chloe Chong",
+  "author": "Roy Barak",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "cors": "^2.8.4",
-    "cowsay": "^1.3.1",
     "dotenv": "^8.1.0",
     "express": "^4.16.3"
   },
